[package]
name = "yaslapi"
version = "0.1.0"
edition = "2021"
authors = ["Ryan Andersen", "Thiabaud Engelbrecht"]
description = "A library that provides safe bindings to the Yet Another Scripting Language (YASL) API."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4.1"
num-derive = "0.4.0"
num-traits = "0.2.16"
yaslapi-sys = "0.2.0"

[dev-dependencies]
rustyline = "12.0.0"

[profile.release]
lto = true
strip = true
panic = "abort"