[package]
name = "yaslapi"
version = "0.2.0"
edition = "2021"
authors = ["Ryan Andersen", "Thiabaud Engelbrecht"]
description = "A library that provides safe bindings to the Yet Another Scripting Language (YASL) API."
license = "MIT"

[dependencies]
once_cell = "1.18.0"
num = "0.4.1"
num-derive = "0.4.0"
num-traits = "0.2.16"
regex = "1.9.5"
yaslapi-sys = "0.2.3"

[dev-dependencies]
cgmath = "0.18.0"
clap = { version = "4.4.3", features = ["derive"] }
once_cell = "1.18.0"
rustyline = "12.0.0"

[profile.release]
lto = true
strip = true
panic = "abort"
